#236 actualising jooqdb codes